sdbusplusplus_depfiles = files(
    'sdbus++',
    'sdbusplus/__init__.py',
    'sdbusplus/enum.py',
    'sdbusplus/error.py',
    'sdbusplus/event.py',
    'sdbusplus/fulltree.py',
    'sdbusplus/interface.py',
    'sdbusplus/main.py',
    'sdbusplus/method.py',
    'sdbusplus/namedelement.py',
    'sdbusplus/path.py',
    'sdbusplus/property.py',
    'sdbusplus/renderer.py',
    'sdbusplus/schemas/events.schema.yaml',
    'sdbusplus/servicename.py',
    'sdbusplus/signal.py',
    'sdbusplus/structNode.py',
    'sdbusplus/templates/error.cpp.mako',
    'sdbusplus/templates/error.hpp.mako',
    'sdbusplus/templates/error.md.mako',
    'sdbusplus/templates/event.cpp.mako',
    'sdbusplus/templates/event.hpp.mako',
    'sdbusplus/templates/event.md.mako',
    'sdbusplus/templates/events.cpp.mako',
    'sdbusplus/templates/events.hpp.mako',
    'sdbusplus/templates/events.md.mako',
    'sdbusplus/templates/full_tree.hpp.mako',
    'sdbusplus/templates/interface.aserver.hpp.mako',
    'sdbusplus/templates/interface.client.hpp.mako',
    'sdbusplus/templates/interface.common.hpp.mako',
    'sdbusplus/templates/interface.md.mako',
    'sdbusplus/templates/interface.server.cpp.mako',
    'sdbusplus/templates/interface.server.hpp.mako',
    'sdbusplus/templates/method.aserver.callback.hpp.mako',
    'sdbusplus/templates/method.aserver.tag.hpp.mako',
    'sdbusplus/templates/method.aserver.typeid.hpp.mako',
    'sdbusplus/templates/method.aserver.vtable.hpp.mako',
    'sdbusplus/templates/method.client.hpp.mako',
    'sdbusplus/templates/method.md.mako',
    'sdbusplus/templates/method.prototype.hpp.mako',
    'sdbusplus/templates/method.server.vtable.cpp.mako',
    'sdbusplus/templates/property.aserver.callback.hpp.mako',
    'sdbusplus/templates/property.aserver.get.hpp.mako',
    'sdbusplus/templates/property.aserver.set.hpp.mako',
    'sdbusplus/templates/property.aserver.tag.hpp.mako',
    'sdbusplus/templates/property.aserver.typeid.hpp.mako',
    'sdbusplus/templates/property.aserver.vtable.hpp.mako',
    'sdbusplus/templates/property.client.hpp.mako',
    'sdbusplus/templates/property.md.mako',
    'sdbusplus/templates/property.server.cpp.mako',
    'sdbusplus/templates/property.server.vtable.cpp.mako',
    'sdbusplus/templates/signal.aserver.emit.hpp.mako',
    'sdbusplus/templates/signal.aserver.typeid.hpp.mako',
    'sdbusplus/templates/signal.aserver.vtable.hpp.mako',
    'sdbusplus/templates/signal.md.mako',
    'sdbusplus/templates/signal.prototype.hpp.mako',
    'sdbusplus/templates/signal.server.vtable.cpp.mako',
    'sdbusplus/templates/structNode.hpp.mako',
)
meson.override_find_program('sdbus++', files('sdbus++'))
sdbusplusplus_prog = find_program('sdbus++', native: true)

meson.override_find_program('sdbus++-gen-meson', files('sdbus++-gen-meson'))
sdbuspp_gen_meson_prog = find_program('sdbus++-gen-meson', native: true)
